--- a/src/gui/SellerList.fxml
+++ b/src/gui/SellerList.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.SellerListController">
+<VBox prefHeight="475.0" prefWidth="690.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.SellerListController">
    <children>
       <Label text="Registro de Departamentos">
          <font>
@@ -26,10 +26,13 @@
       </ToolBar>
       <TableView fx:id="tableViewSeller" prefHeight="200.0" prefWidth="200.0">
         <columns>
-          <TableColumn fx:id="tableColumnId" prefWidth="75.0" text="id" />
-          <TableColumn fx:id="tableColumnName" prefWidth="195.99993896484375" text="nome" />
-            <TableColumn fx:id="tableColumnEDIT" prefWidth="68.0" />
-            <TableColumn fx:id="tableColumnREMOVE" prefWidth="62.4000244140625" />
+          <TableColumn fx:id="tableColumnId" prefWidth="75.0" text="Id" />
+          <TableColumn fx:id="tableColumnName" prefWidth="136.00003814697266" text="Nome" />
+            <TableColumn fx:id="tableColumnEmail" prefWidth="135.199951171875" text="E-mail" />
+            <TableColumn fx:id="tableColumnBirthDate" prefWidth="113.60003662109375" text="Data Nascimento" />
+            <TableColumn fx:id="tableColumnBaseSalary" prefWidth="75.0" text="Salario Base" />
+            <TableColumn fx:id="tableColumnEDIT" minWidth="7.20001220703125" prefWidth="62.399932861328125" />
+            <TableColumn fx:id="tableColumnREMOVE" prefWidth="67.20001220703125" />
         </columns>
       </TableView>
    </children>
